--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="info-highlight">
         <strong>Zaujímavosť:</strong>  
-        Až viac než 40% začínajúcich vývojárov používa free hosting na svoje prvé projekty.
+        <a href="https://samuelfrankovic-ux.github.io/frankovic/">Free-Web Hosting publikovaná stránka.</a>
     </div>
 
     <h2>Čo sa na tejto stránke dozviete</h2>
