--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <p>Tento web vznikol ako semestrálny projekt v rámci predmetu Informatika I. Jeho cieľom je predstaviť bezplatný webhosting, základné možnosti, výhody a obmedzenia, ktoré poskytuje.</p>
 
     <div class="info-highlight">
-        <p><strong>Zaujímavosť:</strong> Táto web stránka je publikovaná aj pomocou GitHub. Prístupná <a href="https://samuelfrankovic-ux.github.io/frankovic/" target="_blank">TU</a>
-        </p>
+        <p><strong>Zaujímavosť:</strong> Táto web stránka je publikovaná aj pomocou GitHub. Prístupná <a href="https://samuelfrankovic-ux.github.io/frankovic/" target="_blank">TU</a>.</p>
+        <p>Návod na bezplatné publikovanie web stránky pomocou GitHub prístupné <a href="https://docs.github.com/en/pages/quickstart" target="_blank">TU</a>.</p>
     </div>
 
     <h2>Čo sa na tejto stránke dozviete</h2>
