--- a/literatura.html
+++ b/literatura.html
@@ -64,7 +64,7 @@
             <li>w3schools - Top Navigation Bar.
                 <a href="https://www.w3schools.com/howto" target="_blank">w3schools.com</a>
             </li>
-            <li>TheCodingSloth - Tutorial videos.
+            <li>TheCodingSloth - Tutorial videos. (HTML for beginners, CSS for beginners)
                 <a href="https://www.youtube.com/@TheCodingSloth/videos" target="_blank">TheCodingSloth.com</a>
             </li>
             <li>Developer Mozilla - Ako na CSS v HTML.
