--- a/literatura.html
+++ b/literatura.html
@@ -30,44 +30,44 @@
         <p>Nižšie je uvedený prehľad zdrojov, z ktorých boli čerpané informácie pre spracovanie projektu:</p>
 
         <ul>
-            <li>WebHostMost
+            <li>WebHostMost. "Free Web Hosting." <strong>WebHostMost,</strong>
                 <a href="https://www.webhostmost.com/free-web-hosting" target="_blank">WebHostMost.com</a>
             </li>
 
-            <li>WebHostMost – Plány a limity
+            <li>WebHostMost. "Plans and Limits - 125MB Free Hosting." <strong>WebHostMost Docs,</strong>
                 <a href="https://docs.webhostmost.com/managed-host-info/plans-and-limits/125mb-free-hosting" target="_blank">WebHostMost.com/plans-and-limits</a>
             </li>
 
-            <li>GoogieHost
-                <a href="https://googiehost.com" target="_blank">GoogieHost</a>
+            <li>GoogieHost. <strong>GoogieHost,</strong>
+                <a href="https://googiehost.com" target="_blank">GoogieHost.com</a>
             </li>
 
-            <li>GoogieHost – recenzia
+            <li>"GoogieHost Review." <strong>WebsitePlanet,</strong>
                 <a href="https://www.websiteplanet.com/web-hosting/googiehost" target="_blank">Websiteplanet.com/googiehost</a>
             </li>
 
-            <li>GitHub Pages
+            <li>GitHub. "GitHub Pages." <strong>GitHub Pages,</strong>
                 <a href="https://pages.github.com" target="_blank">pages.github.com</a>
             </li>
 
-            <li>InfinityFree – oficiálna stránka
+            <li>InfinityFree. <strong>InfinityFree,</strong>
                 <a href="https://www.infinityfree.net" target="_blank">infinityfree.net</a>
             </li>
 
-            <li>InfinityFree – recenzia
+            <li>"InfinityFree Review." <strong>WebsitePlanet,</strong>
                 <a href="https://www.websiteplanet.com/web-hosting/infinityfree" target="_blank">websiteplanet.com/infinityfree</a>
             </li>
 
-            <li>Podnikajte - Ako si vybrať hosting. 
+            <li>"Ako si vybrať hosting." <strong>Podnikajte.sk,</strong> 
                 <a href="https://www.podnikajte.sk/registracne-povinnosti/ako-vybrat-webhosting" target="_blank">podnikajte.sk</a>
             </li>
-            <li>w3schools - Top Navigation Bar.
+            <li>W3Schools. "How to - Top Navigation Bar." <strong>W3Schools,</strong>
                 <a href="https://www.w3schools.com/howto" target="_blank">w3schools.com</a>
             </li>
-            <li>TheCodingSloth - Tutorial videos. (HTML for beginners, CSS for beginners)
+            <li>TheCodingSloth. "HTML for beginners, CSS for beginners" <strong>YouToube,</strong>
                 <a href="https://www.youtube.com/@TheCodingSloth/videos" target="_blank">TheCodingSloth.com</a>
             </li>
-            <li>Developer Mozilla - Ako na CSS v HTML.
+            <li>MDN Web Docs. "Box Model - Styling Basics." <strong>Mozilla Developer Network,</strong>
                 <a href="https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Styling_basics/Box_model" target="_blank">Developer.org</a>
             </li>
         </ul>
