--- a/literatura.html
+++ b/literatura.html
@@ -30,45 +30,75 @@
         <p>Nižšie je uvedený prehľad zdrojov, z ktorých boli čerpané informácie pre spracovanie projektu:</p>
 
         <ul>
-            <li>WebHostMost. "Free Web Hosting." <strong>WebHostMost,</strong>
-                <a href="https://www.webhostmost.com/free-web-hosting" target="_blank">WebHostMost.com</a>
+            <li>
+                WebHostMost. “125Mb Free AI-Managed Hosting – Free Web Hosting.” <strong>WebHostMost,</strong> 2025.
+                Dostupné z: <a href="https://www.webhostmost.com/free-web-hosting" target="_blank" rel="noopener noreferrer">https://www.webhostmost.com/free-web-hosting</a>
+                (<a href="https://www.webhostmost.com/free-web-hosting?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">s UTM</a>)
+                [cit. 10. 11. 2025].
             </li>
 
-            <li>WebHostMost. "Plans and Limits - 125MB Free Hosting." <strong>WebHostMost Docs,</strong>
-                <a href="https://docs.webhostmost.com/managed-host-info/plans-and-limits/125mb-free-hosting" target="_blank">WebHostMost.com/plans-and-limits</a>
+            <li>
+                WebHostMost. <strong>125Mb Free Hosting Limitations.</strong>
+                Dostupné z: <a href="https://docs.webhostmost.com/managed-host-info/plans-and-limits/125mb-free-hosting/" target="_blank" rel="noopener noreferrer">https://docs.webhostmost.com/managed-host-info/plans-and-limits/125mb-free-hosting/</a>
+                (<a href="https://docs.webhostmost.com/managed-host-info/plans-and-limits/125mb-free-hosting/?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">s UTM</a>)
+                [cit. 10. 11. 2025].
             </li>
 
-            <li>GoogieHost. <strong>GoogieHost,</strong>
-                <a href="https://googiehost.com" target="_blank">GoogieHost.com</a>
+            <li>
+                GoogieHost. <strong>GoogieHost – bezplatný webhosting.</strong>
+                Dostupné z: <a href="https://googiehost.com/sk/" target="_blank" rel="noopener noreferrer">https://googiehost.com/sk/</a>
+                (<a href="https://googiehost.com/sk/?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">s UTM</a>)
+                [cit. 10. 11. 2025].
             </li>
 
-            <li>"GoogieHost Review." <strong>WebsitePlanet,</strong>
-                <a href="https://www.websiteplanet.com/web-hosting/googiehost" target="_blank">Websiteplanet.com/googiehost</a>
+            <li>
+                GoogieHost. <strong>GoogieHost – Free web hosting.</strong>
+                Dostupné z: <a href="https://www.websiteplanet.com/web-hosting/googiehost/?device=desktop&geo=ww" target="_blank" rel="noopener noreferrer">https://www.websiteplanet.com/web-hosting/googiehost/</a>
+                [cit. 10. 11. 2025].
             </li>
 
-            <li>GitHub. "GitHub Pages." <strong>GitHub Pages,</strong>
-                <a href="https://pages.github.com" target="_blank">pages.github.com</a>
+            <li>
+                GitHub. <strong>GitHub Pages – GitHub Docs.</strong>
+                Dostupné z: <a href="https://docs.github.com/en/pages" target="_blank" rel="noopener noreferrer">https://docs.github.com/en/pages</a>
+                (<a href="https://docs.github.com/en/pages?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">s UTM</a>)
+                [cit. 10. 11. 2025].
             </li>
 
-            <li>InfinityFree. <strong>InfinityFree,</strong>
-                <a href="https://www.infinityfree.net" target="_blank">infinityfree.net</a>
+            <li>
+                InfinityFree. <strong>InfinityFree – Free web hosting.</strong>
+                Dostupné z: <a href="https://www.infinityfree.com/" target="_blank" rel="noopener noreferrer">https://www.infinityfree.com/</a>
+                [cit. 10. 11. 2025].
             </li>
 
-            <li>"InfinityFree Review." <strong>WebsitePlanet,</strong>
-                <a href="https://www.websiteplanet.com/web-hosting/infinityfree" target="_blank">websiteplanet.com/infinityfree</a>
+            <li>
+                InfinityFree. <strong>InfinityFree – Free Web Hosting.</strong>
+                Dostupné z: <a href="https://www.websiteplanet.com/web-hosting/infinityfree/?device=desktop&geo=ww" target="_blank" rel="noopener noreferrer">https://www.websiteplanet.com/web-hosting/infinityfree/</a>
+                (<a href="https://www.websiteplanet.com/web-hosting/infinityfree/?device=desktop&geo=ww&utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">s UTM</a>)
+                [cit. 10. 11. 2025].
             </li>
 
-            <li>"Ako si vybrať hosting." <strong>Podnikajte.sk,</strong> 
-                <a href="https://www.podnikajte.sk/registracne-povinnosti/ako-vybrat-webhosting" target="_blank">podnikajte.sk</a>
+            <li>
+                Beňo, M., 2019. <strong>Ako si vybrať webhosting: kľúčové faktory, ktoré si treba porovnať pri výbere</strong>. Podnikajte.sk.
+                Dostupné z: <a href="https://www.podnikajte.sk/registracne-povinnosti/ako-vybrat-webhosting" target="_blank" rel="noopener noreferrer">https://www.podnikajte.sk/registracne-povinnosti/ako-vybrat-webhosting</a>
+                [cit. 10. 11. 2025].
             </li>
-            <li>W3Schools. "How to - Top Navigation Bar." <strong>W3Schools,</strong>
-                <a href="https://www.w3schools.com/howto" target="_blank">w3schools.com</a>
+
+            <li>
+                W3Schools. <strong>How TO – Code snippets for HTML, CSS and JavaScript.</strong>
+                Dostupné z: <a href="http://www.w3schools.com/HOWTO/" target="_blank" rel="noopener noreferrer">http://www.w3schools.com/HOWTO/</a>
+                [cit. 10. 11. 2025].
             </li>
-            <li>TheCodingSloth. "HTML for beginners, CSS for beginners" <strong>YouToube,</strong>
-                <a href="https://www.youtube.com/@TheCodingSloth/videos" target="_blank">TheCodingSloth.com</a>
+
+            <li>
+                The Coding Sloth — YouTube kanál. <strong>The Coding Sloth – YouTube videá [online].</strong>
+                Dostupné z: <a href="https://www.youtube.com/@TheCodingSloth/videos" target="_blank" rel="noopener noreferrer">https://www.youtube.com/@TheCodingSloth/videos</a>
+                [cit. 10. 11. 2025].
             </li>
-            <li>MDN Web Docs. "Box Model - Styling Basics." <strong>Mozilla Developer Network,</strong>
-                <a href="https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Styling_basics/Box_model" target="_blank">Developer.org</a>
+
+            <li>
+                Mozilla Developer Network. <strong>The box model – Learn web development.</strong>
+                Dostupné z: <a href="https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Styling_basics/Box_model" target="_blank" rel="noopener noreferrer">https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Styling_basics/Box_model</a>
+                [cit. 10. 11. 2025].
             </li>
         </ul>
     </div>
