--- a/future.html
+++ b/future.html
@@ -29,24 +29,18 @@
 
 		<p>Webhosting prechádza neustálym vývojom a služby, ktoré dnes poznáme ako štandard, boli pred pár rokmi úplnou novinkou. V najbližších rokoch sa očakáva výrazný posun smerom k väčšej automatizácii, rýchlosti a jednoduchej správe webov pre bežných používateľov.</p>
 
-		<div class="info-highlight">
-			<strong>Vedeli ste?</strong>  
-			Mnohé moderné hostingové platformy už dnes dokážu automaticky optimalizovať obrázky, komprimovať dáta a zrýchliť načítavanie webu pomocou AI.
-		</div>
-
 		<h2>Najdôležitejšie trendy</h2>
 
 		<ul>
 			<li><strong>AI optimalizácia webov:</strong> Hostingy budú ponúkať funkcie na automatické úpravy výkonu a bezpečnosti.</li>
-			<li><strong>Serverless hosting:</strong> Weby budú bežať bez klasických serverov – len na požiadanie, čím ušetria náklady.</li>
-			<li><strong>Integrácia s GitHubom a GitLabom:</strong> Každá zmena vo vašom projekte sa automaticky nasadí na server.</li>
+			<li><strong>Serverless hosting:</strong> Weby budú bežať bez klasických serverov – len na požiadanie, čím poskytovatelia ušetria náklady.</li>
 			<li><strong>Lepšia bezpečnosť:</strong> Automatické skenovanie a blokovanie útokov.</li>
 		</ul>
 
 		<h2>Budúcnosť free hostingu</h2>
 		<p>Bezplatné hostingové riešenia budú čoraz dostupnejšie a technicky vyspelejšie. Študenti, začínajúci programátori a rôzne projekty budú mať väčší priestor na experimentovanie bez investícií.</p>
 
-		<p>Môj osobný názor je, že free hosting bude aj naďalej rásť, no komerčné projekty sa budú spoliehať skôr na platené varianty kvôli stabilite, výkonu a podpore.</p>
+		<p>Môj osobný názor je, že free hosting bude aj naďalej rásť a bude stále častejšie využívaný, no komerčné projekty sa budú spoliehať skôr na platené možnosti kvôli stabilite, výkonu a podpore.</p>
 
 		<div class="info-highlight">
 			Budúcnosť webhostingu bude ovplyvňovať umelá inteligencia a tým budú Free-Web Hostingy viac automatizované.
