--- a/stav.html
+++ b/stav.html
@@ -41,24 +41,24 @@
 				<th>Obmedzenia</th>
 			</tr>
 			<tr>
-				<td><strong><a href="https://www.webhostmost.sk/free-web-hosting" target="_blank">WebHostMost</strong></td>
-				<td>Bezplatný hosting s podporou PHP (programovací jazyk) a MySQL, jednoduchá správa, slovenské prostredie.</td>
-				<td>Menší úložný priestor a obmedzené parametre oproti plateným plánom.</td>
+				<td><strong><a href="https://docs.github.com/en/pages" target="_blank">GitHub Pages</a></strong></td>
+				<td>Výborné pre statické stránky, prepojenie s GitHubom, ktorý ukladá verzie stránky, ku ktorým sa je možné vrátiť späť a upravovať ich.<a href="https://docs.github.com/en/pages" target="_blank">[1]</a></td>
+				<td>Bez podpory dynamických jazykov(PHP) a databáz(MySQL).<a href="https://docs.github.com/en/pages" target="_blank">[1]</a></td>
 			</tr>
 			<tr>
-				<td><strong><a href="https://docs.github.com/en/pages" target="_blank">GitHub Pages</strong></td>
-				<td>Výborné pre statické stránky, prepojenie s GitHubom, ktorý ukladá verzie stránky, ku ktorým sa je možné vrátiť späť a upravovať ich.</td>
-				<td>Bez podpory dynamických jazykov(PHP) a databáz(MySQL).</td>
+				<td><strong><a href="https://www.webhostmost.sk/free-web-hosting" target="_blank">WebHostMost</a></strong></td>
+				<td>Bezplatný hosting s podporou PHP (programovací jazyk) a MySQL(relačná databáza), jednoduchá správa, slovenské prostredie.<a href="https://www.webhostmost.sk/free-web-hosting" target="_blank">[2]</a></td>
+				<td>Menší úložný priestor a obmedzené parametre oproti plateným plánom.<a href="https://www.webhostmost.sk/free-web-hosting" target="_blank">[2]</a></td>
 			</tr>
 			<tr>
-				<td><strong><a href="https://www.infinityfree.com" target="_blank">InfinityFree</strong></td>
-				<td>Veľkorysé limity ako veľké úložisko(5GB), vysoký prenos dát(50 000 návštevníkov mesačne), podpora PHP a MySQL.</td>
-				<td>Bez e-mailovej podpory, občasné technické výpadky.</td>
+				<td><strong><a href="https://www.infinityfree.com" target="_blank">InfinityFree</a></strong></td>
+				<td>Veľkorysé limity ako veľké úložisko(5GB), vysoký prenos dát(50 000 návštevníkov mesačne), podpora PHP a MySQL.<a href="https://www.infinityfree.com" target="_blank">[3]</a></td>
+				<td>Bez e-mailovej podpory, občasné technické výpadky.<a href="https://www.infinityfree.com" target="_blank">[3]</a></td>
 			</tr>
 			<tr>
 				<td><strong><a href="https://googiehost.com" target="_blank">GoogieHost</a></strong></td>
-				<td>Doživotný free hosting, SSL zadarmo, podpora PHP a MySQL, bez reklám.</td>
-				<td>Môže vyžadovať overenie identity, občas menej stabilný výkon.</td>
+				<td>Doživotný free hosting, SSL(šifrované pripojenie) zadarmo, podpora PHP a MySQL, bez reklám.<a href="https://googiehost.com" target="_blank">[4]</a></td>
+				<td>Môže vyžadovať overenie identity, občas menej stabilný výkon.<a href="https://googiehost.com" target="_blank">[4]</a></td>
 			</tr>
 		</table>
 
@@ -71,7 +71,7 @@
 		</ul>
 
 		<div class="info-highlight">
-			Bezplatné hostingy sú výborným riešením na učenie, experimentovanie a menšie projekty, no pre väčšie profesionálne weby sú často potrebné platené riešenia.
+			Bezplatné hostingy sú výborným riešením na jednoduché a malé projekty, no pre väčšie profesionálne weby sú často potrebné platené riešenia.
 		</div>
 	</div>
 
