--- a/uvod.html
+++ b/uvod.html
@@ -27,20 +27,19 @@
 	<div class="content-box">
 		<h2>Úvod</h2>
 
-		<p>Téma projektu je <strong>Free Web-Hosting</strong> – oblasť, ktorá sa venuje bezplatným riešeniam umožňujúcim používateľom publikovať webové stránky bez platenia za serverový priestor. Takéto služby sú veľmi obľúbené medzi študentmi, začínajúcimi programátormi a tvorcami menších projektov.</p>
+		<p>Téma projektu je <strong>Free Web-Hosting</strong> – oblasť, ktorá sa venuje bezplatným riešeniam umožňujúcim používateľom publikovať webové stránky bez platenia za serverový priestor.</p>
 
 		<div class="info-highlight">
 			<strong>Zaujímavosť:</strong> Mnoho dnešných webových vývojárov začínalo práve na bezplatných hostingoch, kde získali svoje prvé skúsenosti s publikovaním webových stránok a experimentovaním s rôznymi technológiami.
 		</div>
 
 		<h2>Cieľ a motivácia</h2>
-		<p>Cieľom projektu je predstaviť základné možnosti free hostingu, popísať jeho výhody, obmedzenia a moderné trendy. Zároveň je motiváciou aj záujem o webové technológie a snaha naučiť sa, ako efektívne publikovať web bez finančných nákladov.</p>
+		<p>Cieľom projektu je predstaviť základné možnosti free hostingu, popísať jeho výhody, obmedzenia a moderné trendy. Motiváciou je aj záujem o informačné technológie a snaha naučiť sa, ako efektívne publikovať web bez finančných nákladov.</p>
 
 		<h2>Čo sa v projekte dozviete?</h2>
 		<ul>
 			<li>aké typy bezplatných hostingov existujú,</li>
 			<li>aký je aktuálny stav tejto problematiky,</li>
-			<li>aké trendy ovplyvnia free hosting v budúcnosti,</li>
 			<li>odporúčania pre výber vhodného riešenia.</li>
 		</ul>
 	</div>
