--- a/zaver.html
+++ b/zaver.html
@@ -27,11 +27,11 @@
 	<div class="content-box">
 		<h2>Záver a získané poznatky</h2>
 
-		<p>Počas práce na tomto projekte som získal prehľad o možnostiach a aktuálnom stave bezplatného webhostingu. Naučil som sa vytvárať webové stránky pomocou HTML a zkrášľovať ich pomocou CSS. Zistil som, že aj bez finančných investícií je možné vytvoriť a sprístupniť plnohodnotnú webovú stránku, ktorá môže slúžiť ako portfólio, menší projekt alebo priestor na učenie sa nových technológií.</p>
+		<p>Počas práce na tomto projekte som získal prehľad o aktuálnom stave bezplatného webhostingu a jeho možnostiach. Naučil som sa vytvárať webové stránky pomocou HTML a skrášľovať ich pomocou CSS. Zistil som, že aj bez finančných investícií je možné vytvoriť a sprístupniť plnohodnotnú webovú stránku, ktorá môže slúžiť ako portfólio, menší projekt alebo priestor na učenie sa nových technológií.</p>
 
 		<div class="info-highlight">
 			<strong>Dôležité zistenie:</strong>
-			Free hosting je ideálny na učenie sa a malé projekty, no pri profesionálnych riešeniach
+			Free hosting je ideálny na učenie sa a malé projekty, no pri profesionálnych projektoch
 			zohrávajú veľkú rolu najmä stabilita, rýchlosť a technická podpora, ktoré sú typické
 			pre platené hostingy.
 		</div>
@@ -46,7 +46,7 @@
 		</ul>
 
 		<h2>Záverečné hodnotenie</h2>
-		<p>V porovnaní s minulosťou prešli bezplatné hostingy výrazným technologickým pokrokom. Sú rýchlejšie, prehľadnejšie a dostupnejšie. Tento projekt mi pomohol lepšie porozumieť ich fungovaniu, ako aj možnostiam, ktoré ponúkajú. Do budúcnosti očakávam ďalší rast kvality a rozširovanie funkcionalít, čo spraví free hosting ešte atraktívnejším pre nových používateľov.</p>
+		<p>V porovnaní s minulosťou prešli bezplatné hostingy výrazným technologickým pokrokom. Sú rýchlejšie, prehľadnejšie a dostupnejšie. Tento projekt mi pomohol lepšie porozumieť ich fungovaniu, ako aj možnostiam, ktoré ponúkajú. Do budúcnosti očakávam ďalší rast kvality a rozširovanie funkcii, čo spraví free hosting ešte atraktívnejším pre nových používateľov.</p>
 
 		<p>Téma projektu bola prínosná a umožnila mi spojiť teoretické poznatky s praktickým vytvorením vlastnej webovej stránky. Výsledkom je prehľad o dostupných možnostiach pre bezplatné publikovanie webového obsahu.</p>
 	</div>
