--- a/literatura.html
+++ b/literatura.html
@@ -30,72 +30,67 @@
         <ul>
             <li>
                 WebHostMost. “125Mb Free AI-Managed Hosting – Free Web Hosting.” <strong>WebHostMost,</strong> 2025.
-                Dostupné z: <a href="https://www.webhostmost.com/free-web-hosting" target="_blank" rel="noopener noreferrer">https://www.webhostmost.com/free-web-hosting</a>
-                (<a href="https://www.webhostmost.com/free-web-hosting?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">s UTM</a>)
+                Dostupné z: <a href="https://www.webhostmost.com/free-web-hosting" target="_blank">https://www.webhostmost.com/free-web-hosting</a>
                 [cit. 10. 11. 2025].
             </li>
 
             <li>
                 WebHostMost. <strong>125Mb Free Hosting Limitations.</strong>
-                Dostupné z: <a href="https://docs.webhostmost.com/managed-host-info/plans-and-limits/125mb-free-hosting/" target="_blank" rel="noopener noreferrer">https://docs.webhostmost.com/managed-host-info/plans-and-limits/125mb-free-hosting/</a>
-                (<a href="https://docs.webhostmost.com/managed-host-info/plans-and-limits/125mb-free-hosting/?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">s UTM</a>)
+                Dostupné z: <a href="https://docs.webhostmost.com/managed-host-info/plans-and-limits/125mb-free-hosting/" target="_blank">https://docs.webhostmost.com/managed-host-info/plans-and-limits/125mb-free-hosting/</a>
                 [cit. 10. 11. 2025].
             </li>
 
             <li>
                 GoogieHost. <strong>GoogieHost – bezplatný webhosting.</strong>
                 Dostupné z: <a href="https://googiehost.com/sk/" target="_blank" rel="noopener noreferrer">https://googiehost.com/sk/</a>
-                (<a href="https://googiehost.com/sk/?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">s UTM</a>)
                 [cit. 10. 11. 2025].
             </li>
 
             <li>
                 GoogieHost. <strong>GoogieHost – Free web hosting.</strong>
-                Dostupné z: <a href="https://www.websiteplanet.com/web-hosting/googiehost/?device=desktop&geo=ww" target="_blank" rel="noopener noreferrer">https://www.websiteplanet.com/web-hosting/googiehost/</a>
+                Dostupné z: <a href="https://www.websiteplanet.com/web-hosting/googiehost/?device=desktop&geo=ww" target="_blank">https://www.websiteplanet.com/web-hosting/googiehost/</a>
                 [cit. 10. 11. 2025].
             </li>
 
             <li>
                 GitHub. <strong>GitHub Pages – GitHub Docs.</strong>
-                Dostupné z: <a href="https://docs.github.com/en/pages" target="_blank" rel="noopener noreferrer">https://docs.github.com/en/pages</a>
-                (<a href="https://docs.github.com/en/pages?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">s UTM</a>)
+                Dostupné z: <a href="https://docs.github.com/en/pages" target="_blank">https://docs.github.com/en/pages</a>
                 [cit. 10. 11. 2025].
             </li>
 
             <li>
                 InfinityFree. <strong>InfinityFree – Free web hosting.</strong>
-                Dostupné z: <a href="https://www.infinityfree.com/" target="_blank" rel="noopener noreferrer">https://www.infinityfree.com/</a>
+                Dostupné z: <a href="https://www.infinityfree.com/" target="_blank">https://www.infinityfree.com/</a>
                 [cit. 10. 11. 2025].
             </li>
 
             <li>
                 InfinityFree. <strong>InfinityFree – Free Web Hosting.</strong>
-                Dostupné z: <a href="https://www.websiteplanet.com/web-hosting/infinityfree/?device=desktop&geo=ww" target="_blank" rel="noopener noreferrer">https://www.websiteplanet.com/web-hosting/infinityfree/</a>
-                (<a href="https://www.websiteplanet.com/web-hosting/infinityfree/?device=desktop&geo=ww&utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">s UTM</a>)
+                Dostupné z: <a href="https://www.websiteplanet.com/web-hosting/infinityfree/?device=desktop&geo=ww" target="_blank">https://www.websiteplanet.com/web-hosting/infinityfree/</a>
                 [cit. 10. 11. 2025].
             </li>
 
             <li>
                 Beňo, M., 2019. <strong>Ako si vybrať webhosting: kľúčové faktory, ktoré si treba porovnať pri výbere</strong>. Podnikajte.sk.
-                Dostupné z: <a href="https://www.podnikajte.sk/registracne-povinnosti/ako-vybrat-webhosting" target="_blank" rel="noopener noreferrer">https://www.podnikajte.sk/registracne-povinnosti/ako-vybrat-webhosting</a>
+                Dostupné z: <a href="https://www.podnikajte.sk/registracne-povinnosti/ako-vybrat-webhosting" target="_blank">https://www.podnikajte.sk/registracne-povinnosti/ako-vybrat-webhosting</a>
                 [cit. 10. 11. 2025].
             </li>
 
             <li>
                 W3Schools. <strong>How TO – Code snippets for HTML, CSS and JavaScript.</strong>
-                Dostupné z: <a href="http://www.w3schools.com/HOWTO/" target="_blank" rel="noopener noreferrer">http://www.w3schools.com/HOWTO/</a>
+                Dostupné z: <a href="http://www.w3schools.com/HOWTO/" target="_blank">http://www.w3schools.com/HOWTO/</a>
                 [cit. 10. 11. 2025].
             </li>
 
             <li>
                 The Coding Sloth — YouTube kanál. <strong>The Coding Sloth – YouTube videá [online].</strong>
-                Dostupné z: <a href="https://www.youtube.com/@TheCodingSloth/videos" target="_blank" rel="noopener noreferrer">https://www.youtube.com/@TheCodingSloth/videos</a>
+                Dostupné z: <a href="https://www.youtube.com/@TheCodingSloth/videos" target="_blank">https://www.youtube.com/@TheCodingSloth/videos</a>
                 [cit. 10. 11. 2025].
             </li>
 
             <li>
                 Mozilla Developer Network. <strong>The box model – Learn web development.</strong>
-                Dostupné z: <a href="https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Styling_basics/Box_model" target="_blank" rel="noopener noreferrer">https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Styling_basics/Box_model</a>
+                Dostupné z: <a href="https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Styling_basics/Box_model" target="_blank">https://developer.mozilla.org/en-US/docs/Learn_web_development/Core/Styling_basics/Box_model</a>
                 [cit. 10. 11. 2025].
             </li>
         </ul>
